// Use of this source code is governed by a BSD-style license.
//
// Author: Huchao Bi (bihuchao at qq dot com)

syntax = "proto3";

option cc_generic_services = true;

package small_rpc;

message ClientInfo {
    uint64 id     = 1;
    bytes  client = 2;
};
